# ORB_SLAM3_Remastered

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
Examples/Monocular/: mono_euroc.cpp  mono_kitti.cpp  mono_realsense_D435i.cpp  mono_realsense_t265.cpp  mono_tum.cpp  mono_tum_vi.cpp
Examples/Monocular-Inertial/: mono_inertial_euroc.cpp  mono_inertial_realsense_D435i.cpp  mono_inertial_realsense_t265.cpp  mono_inertial_tum_vi.cpp
Examples/RGB-D/: rgbd_realsense_D435i.cpp  rgbd_tum.cpp
Examples/RGB-D-Inertial/: rgbd_inertial_realsense_D435i.cpp
Examples/Stereo/: stereo_euroc.cpp  stereo_kitti.cpp  stereo_realsense_D435i.cpp  stereo_realsense_t265.cpp  stereo_tum_vi.cpp
Examples/Stereo-Inertial/: stereo_inertial_euroc.cpp  stereo_inertial_realsense_D435i.cpp  stereo_inertial_realsense_t265.cpp  stereo_inertial_tum_vi.cpp
docker/: CMakeLists.txt  Dockerfile  display_test.cpp
include/: Atlas.hpp  Converter.hpp  FeatureExtractor.hpp  Frame.hpp  FrameDrawer.hpp  G2oTypes.hpp  ImuTypes.hpp  KeyFrame.hpp  KeyFrameDatabase.hpp  LocalMapping.hpp  LoopClosing.hpp  MLPnPsolver.hpp  Map.hpp  MapDrawer.hpp  MapPoint.hpp  ORBVocabulary.hpp  ORBextractor.hpp  ORBmatcher.hpp  OptimizableTypes.hpp  Optimizer.hpp  SerializationUtils.hpp  Settings.hpp  Sim3Solver.hpp  System.hpp  Tracking.hpp  TrackingObserver.hpp  TwoViewReconstruction.hpp  Viewer.hpp
include/CameraModels/: CameraFactory.hpp  GeometricCamera.hpp  KannalaBrandt8.hpp  Pinhole.hpp
include/Examples/: DatasetLoader.hpp  SlamRunner.hpp
include/camera/: GeometricCamera.hpp  KannalaBrandt8.hpp  Pinhole.hpp
include/closing/: LoopClosing.hpp  Sim3Solver.hpp
include/core/: Converter.hpp  ImuTypes.hpp  Interfaces.hpp  KeyFrame.hpp  MapPoint.hpp  SensorTypes.hpp  Sim3Type.hpp  Types.hpp
include/io/: SerializationUtils.hpp  Settings.hpp  TrajectoryWriter.hpp
include/mapping/: ABTestOptimizer.hpp  G2oOptimizer.hpp  G2oTypes.hpp  GtsamOptimizer.hpp  IOptimizer.hpp  InertialGravityScaleFactor.hpp  LocalMapping.hpp  OptimizableTypes.hpp  Optimizer.hpp
include/recognition/: KeyFrameDatabase.hpp  PlaceRecognition.hpp
include/tracking/: MLPnPsolver.hpp  ORBextractor.hpp  ORBmatcher.hpp  Tracking.hpp
include/visualization/: FrameDrawer.hpp  Viewer.hpp
scripts/: build.sh  build_third_party.sh
src/: Atlas.cpp  FeatureExtractor.cpp  Frame.cpp  FrameDrawer.cpp  ImuTypes.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp  LocalMapping.cpp  LoopClosing.cpp  MLPnPsolver.cpp  Map.cpp  MapDrawer.cpp  MapPoint.cpp  ORBextractor.cpp  ORBmatcher.cpp  Optimizer.cpp  Settings.cpp  Sim3Solver.cpp  System.cpp  Tracking.cpp  TwoViewReconstruction.cpp  Viewer.cpp
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/camera/: KannalaBrandt8.cpp
src/closing/: LoopClosing.cpp  Sim3Solver.cpp
src/core/: Config.cpp  Converter.cpp  Frame.cpp  GeometricTools.cpp  ImuTypes.cpp  KeyFrame.cpp  Map.cpp  MapPoint.cpp  Sim3Type.cpp
src/io/: Settings.cpp  TrajectoryWriter.cpp
src/mapping/: ABTestOptimizer.cpp  G2oOptimizer.cpp  G2oTypes.cpp  GtsamOptimizer.cpp  LocalMapping.cpp  Optimizer.cpp
src/recognition/: PlaceRecognition.cpp
src/tracking/: MLPnPsolver.cpp  ORBmatcher.cpp  Tracking.cpp
src/visualization/: FrameDrawer.cpp  MapDrawer.cpp  Viewer.cpp
tests/: CMakeLists.txt  test_atlas.cpp  test_converter.cpp  test_dbow2_wrapper.cpp  test_geometric_tools.cpp  test_imu_types.cpp  test_map.cpp  test_map_point.cpp  test_orb_extractor.cpp  test_orb_matcher.cpp  test_trajectory_writer.cpp
